# Chat-app

./: Cargo.toml  README.md  client.js
src/: main.rs
static/: index.html
