[package]
name = "ws-demo"
version = "0.1.0"
authors = ["chaitrali kakdechaitrali16@gmail.com"]
edition ="2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.0" 
actix-web-actors="4.0"
actix = "0.13.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
bytes = "1.0"
env_logger = '0.11.3'
log="0.4.21"
actix-files="0.6.5"
rand="0.8.5"